--- a/config/order-dev.properties
+++ b/config/order-dev.properties
@@ -1,19 +1,5 @@
-# Application info
-spring.application.name=order-service
-server.port=8082
-
-# Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
-spring.datasource.username=root
-spring.datasource.password=root
-
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Kafka configuration
-spring.kafka.bootstrap-servers=localhost:9092
-order.kafka.topic=order-created
-
-# Inventory Service URL
-inventory.service.url=http://localhost:8083
+order.id=ORD-1001
+order.customer.id=CUST-789
+order.amount=1499.00
+order.status=CONFIRMED
+order.payment.method=CC
